// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`iOS BpkFlatListItemSeparator dark mode should render correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgb(68, 80, 95)",
      "flex": 1,
      "height": 1,
      "marginLeft": 16,
    }
  }
/>
`;

exports[`iOS BpkFlatListItemSeparator light mode should render correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgb(194, 201, 205)",
      "flex": 1,
      "height": 1,
      "marginLeft": 16,
    }
  }
/>
`;
